Fixed scrollbar issue (layout movement) by opening/closing a modal

--- a/css/style.less
+++ b/css/style.less
@@ -27,6 +27,7 @@ Table of Bootstrap modifications:
 body {
   padding-top: 130px;
   background-color: #f4f4f4;
+
 }
 
 a:hover {
@@ -451,6 +452,14 @@ textarea {
     padding-top: 30px;
     padding-bottom: 30px;
   }
+}
+
+.modal-open {
+  overflow: visible;
+}
+
+.modal {
+  overflow-y: visible;
 }
 
 .modal-dialog-extra-small {
