--- a/themes/HumHub/css/theme.less
+++ b/themes/HumHub/css/theme.less
@@ -42,7 +42,6 @@ body {
   background-color: @colorBackground2;
   color: #777777;
   font-family: 'Open Sans', sans-serif;
-  overflow-y: scroll;
 
   a, a:hover, a:focus, a:active, a.active {
     color: @colorFont3;
